[package]
name = "yik"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Goller <g.goller@proxmox.com>"]
description = "YIK (Yeet Into Kernel) - A TUI for selecting and switching kernel versions using kexec"

[dependencies]
ratatui = { version = "0.28", default-features = false, features = [
    "crossterm",
] }
crossterm = "0.28"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
overflow-checks = false
debug-assertions = false
incremental = false

[[bin]]
name = "yik"
path = "src/main.rs"
